<resources>
    <string name="app_name">Digital Clock</string>
    <string name="times">Times</string>
    <string name="setting">Setting</string>
    <string name="refresh_rate">Refresh Rate</string>
    <string name="language">Language</string>
    <string name="no_data_hint">No Data</string>
    <string name="region_display_text">%s | %s</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="error_occur">Error Occur</string>
    <string name="retry">Retry</string>
    <string name="close">Close</string>
    <string name="floating_window_create_hint">Do you want to display this digital clock as a floating window?</string>
    <string name="fetch_available_timezone_error">Get available time zone error, please try again.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <!-- refresh rate menu -->
    <string name="menu_refresh_1_min">1 Min</string>
    <string name="menu_refresh_5_min">5 Min</string>
    <string name="menu_refresh_10_min">10 Min</string>
    <!-- language menu -->
    <string name="menu_language_en">English</string>
    <string name="menu_language_zh_tw">Traditional Chinese</string>

</resources>