<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh_white"
        android:title="@string/refresh_rate"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/action_refresh_1_min"
                android:checkable="true"
                android:title="@string/menu_refresh_1_min" />
            <item
                android:id="@+id/action_refresh_5_min"
                android:checkable="true"
                android:title="@string/menu_refresh_5_min" />
            <item
                android:id="@+id/action_refresh_10_min"
                android:checkable="true"
                android:title="@string/menu_refresh_10_min" />
        </menu>

    </item>

    <item
        android:id="@+id/action_language"
        android:icon="@drawable/ic_language_white"
        android:title="@string/language"
        app:showAsAction="ifRoom" />
</menu>